[workspace]
resolver = "2"

members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"infrablockspace-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/infra-asset-system",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
