[package]
name = "infrablockspace-parachain-bin"
version = "0.9.370"
authors = ["blockchain labs"]
build = "build.rs"
edition = "2021"
description = "Runs a infrablockspace parachain node which could be a collator."

[[bin]]
name = "infrablockspace-parachain"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.63"
clap = { version = "4.1.6", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.26"
hex-literal = "0.3.4"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }

# Local
infra-asset-hub-runtime = { path = "../parachains/runtimes/assets/infra-asset-hub" }
infra-asset-hub-testnet-runtime = { path = "../parachains/runtimes/assets/infra-asset-hub-testnet" }
infra-asset-hub-devnet-runtime = { path = "../parachains/runtimes/assets/infra-asset-hub-devnet" }
jsonrpsee = { version = "0.16.2", features = ["server"] }
parachains-common = { path = "../parachains/common" }

# Substrate
frame-benchmarking = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-assets = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-session = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-executor = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-service = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-common = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-network-sync = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-offchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus-aura = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-serializer = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
substrate-prometheus-endpoint = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
try-runtime-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master", optional = true }
sc-transaction-pool-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
pallet-transaction-payment-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
substrate-state-trie-migration-rpc = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# infrablockspace
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-service = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

# Cumulus
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-aura = { path = "../client/consensus/aura" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-consensus-common = { path = "../client/consensus/common" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../primitives/parachain-inherent" }
cumulus-relay-chain-interface = { path = "../client/relay-chain-interface" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[dev-dependencies]
assert_cmd = "2.0"
nix = { version = "0.26.1", features = ["signal"] }
tempfile = "3.4.0"
tokio = { version = "1.25.0", features = ["macros", "time", "parking_lot"] }
wait-timeout = "0.2"
# purge_chain_works works with rococo-local and needs to allow this
infrablockspace-cli = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master", features = [
	"rococo-native",
] }

[features]
default = []
runtime-benchmarks = [
	"infrablockspace-service/runtime-benchmarks",
]
try-runtime = [
	"try-runtime-cli/try-runtime",
]
