[package]
name = "cumulus-client-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
futures = "0.3.21"
parking_lot = "0.12.0"
tracing = "0.1.25"

# Substrate
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# infrablockspace
infrablockspace-node-primitives = { git = "https://github.com/InfraBlockchain/infrablockspace", branch = "master" }
infrablockspace-node-subsystem = { git = "https://github.com/InfraBlockchain/infrablockspace", branch = "master" }
infrablockspace-overseer = { git = "https://github.com/InfraBlockchain/infrablockspace", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infrablockspace", branch = "master" }

# Cumulus
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-network = { path = "../network" }
cumulus-primitives-core = { path = "../../primitives/core" }

[dev-dependencies]
async-trait = "0.1.42"

# Substrate
sp-maybe-compressed-blob = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-tracing = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# infrablockspace
infrablockspace-node-subsystem-test-helpers = { git = "https://github.com/InfraBlockchain/infrablockspace", branch = "master" }

# Cumulus
cumulus-test-client = { path = "../../test/client" }
cumulus-test-runtime = { path = "../../test/runtime" }
