[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2021"

[dependencies]
async-trait = "0.1.63"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
futures = "0.3.26"
futures-timer = "3.0.2"
parking_lot = "0.12.1"
tracing = "0.1.37"

# Substrate
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# infrablockspace
infrablockspace-node-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-parachain = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

# Cumulus
cumulus-relay-chain-interface = { path = "../relay-chain-interface" }

[dev-dependencies]
portpicker = "0.1.1"
tokio = { version = "1.25.0", features = ["macros"] }
url = "2.3.1"

# Substrate
sc-cli = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sc-client-api = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-consensus = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-core = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keyring = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
sp-keystore = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }
substrate-test-utils = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

# infrablockspace
infrablockspace-client = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }
infrablockspace-test-client = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

# Cumulus
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-relay-chain-inprocess-interface = { path = "../relay-chain-inprocess-interface" }
cumulus-test-service = { path = "../../test/service" }
