[package]
name = "pallet-system-token-aggregator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "transaction fee aggregator"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
log = "0.4.17"

# Substrate
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
pallet-sudo = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-builder = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-primitives = { package = "xcm-primitives", git = "https://github.com/InfraBlockchain/infra-trappist", branch = "dev", default-features = false }

pallet-xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
pallet-assets = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

# infrablockspace
infrablockspace-primitives = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }

# Cumulus
pallet-collator-selection = { path = "../collator-selection", default-features = false }
parachain-info = { path = "../../parachains/pallets/parachain-info", default-features = false }
pallet-asset-registry = { package = "pallet-asset-registry", git = "https://github.com/InfraBlockchain/infra-trappist", branch = "dev", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"pallet-collator-selection/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-sudo/std",
	"infrablockspace-primitives/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm-primitives/std",
	"pallet-xcm/std",
	"pallet-assets/std",
	"pallet-asset-registry/std"
]
try-runtime = ["frame-support/try-runtime"]
