[package]
name = "cumulus-test-relay-validation-worker-provider"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
build = "build.rs"

[dependencies]

# infrablockspace
infrablockspace-node-core-pvf = { git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master" }

[build-dependencies]
toml = "0.7.2"
