[package]
name = "assets-common"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
description = "Assets common utilities"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.17", default-features = false }

# Substrate
frame-support = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-api = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/InfraBlockchain/infra-substrate", default-features = false, branch = "master" }

# infrablockspace
xcm = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-builder = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-executor = { git = "https://github.com/InfraBlockchain/infra-relay-chain", default-features = false, branch = "master" }
xcm-primitives = { package = "xcm-primitives", git = "https://github.com/InfraBlockchain/infra-relay-chain", branch = "master", default-features = false }

# Cumulus
parachains-common = { path = "../../../common", default-features = false }
cumulus-primitives-core = { path = "../../../../primitives/core", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/InfraBlockchain/infra-substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"parachains-common/std",
	"cumulus-primitives-core/std",
	"sp-api/std",
	"sp-std/std",
	"xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
]
